<resources>
    <string name="app_name">Can I Skip Class?</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_crud_course">Add/Edit Course</string>
    <string name="course_name_label">Course Name: </string>
    <string name="percent_lost_for_skip_label">Percent Lost for Skipping: </string>
    <string name="course_min_grade_label">Minimum Grade: </string>
    <string name="course_edit_confirm">Confirm</string>
    <string name="enter_course_hint">Enter Course Name</string>
    <string name="allowed_absences_label">Allowed Absences: </string>
    <string name="professor_name">Professor Last Name: </string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="title_activity_add_assignment">AddAssignmentActivity</string>
    <string name="assignment_name_label">Assignment Name:</string>
    <string name="assignment_grade_label">Grade:</string>
    <string name="assignment_weight_label">Weight:</string>
    <string name="enter_assignment_hint">Enter Assignment Name</string>
    <string name="assignment_cat_label">Category </string>
    <string name="remove_course">Remove Course</string>
    <string name="category_name">Name</string>
    <string name="category_weight">Weight</string>
    <string name="database_viewer">View database</string>
</resources>
